--- a/index.html
+++ b/index.html
@@ -6,9 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple Image Editor</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"/>
 </head>
 <body>
-    
+    <div class="editor">
+        <section class="editor__image">
+            <img src="" class="editor__picture d-none">
+            <div class="editor__file">
+                <p>Select image</p>
+                <input type="file" id="file"> 
+            </div>
+        </section>
+        <section class="editor__options">
+            <i class="fa-solid fa-crop-simple"></i>
+            <i class="fa-solid fa-brush"></i>
+            <i class="fa-solid fa-circle-half-stroke"></i>
+        </section>
+        <section class="editor__functions">
+
+        </section>
+    </div>
     <script src="index.js"></script>
 </body>
 </html>
