--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 <body>
     <div class="editor">
         <section class="editor__image">
-            <img src="" class="editor__picture d-none">
+            <i class="fas fa-close editor__close__image " style="display: none;"></i>
+            <img src="" class="editor__picture d-none" >
             <div class="editor__file">
                 <p>Select image</p>
-                <input type="file" id="file"> 
+                <input type="file" id="file" accept="image/*"  enctype="multipar/form-data"> 
             </div>
         </section>
         <section class="editor__options">
