--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
             <i class="fas fa-close editor__close__image " style="display: none;"></i>
             <img src="" class="editor__picture d-none" >
             <div class="editor__file">
-                <p>Select image</p>
+                <i class="fa-solid fa-image"></i>
+                <p>Select or drop image</p>
                 <input type="file" id="file" accept="image/*"  enctype="multipar/form-data"> 
             </div>
         </section>
