feature for image rotation

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <i class="fa-solid fa-brush"></i>
             <i class="fa-solid fa-circle-half-stroke"></i>
         </section>
-        <section class="editor__functions">
+        <section class="editor__tools">
 
         </section>
     </div>
