Adding save image funcionality

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <i class="fa-solid fa-crop-simple"></i>
             <i class="fa-solid fa-brush"></i>
             <i class="fa-solid fa-circle-half-stroke"></i>
+            <i class="fa-solid fa-floppy-disk"></i>
         </section>
         <section class="editor__tools">
 
